--- a/portfolio.html
+++ b/portfolio.html
@@ -76,26 +76,34 @@
             <a href="#" class="menu-link">Контакты</a>
           </li>
         </ul>
-        <div class="menu-contacts">
-          <a class="contacts-tel" href="tel:380961111111">+38 096 111 11 11</a>
-          <a class="contacts-mail" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
+        <div>
+          <ul class="menu-contacts">
+            <li>
+              <a class="contacts-tel" href="tel:380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+            <li>
+              <a class="contacts-mail" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+          <ul class="menu-social">
+            <li class="social-page">
+              <a href="https://www.instagram.com/">Instagram</a>
+            </li>
+            <li class="social-page">
+              <a href="https://twitter.com/">Twitter</a>
+            </li>
+            <li class="social-page">
+              <a href="https://www.facebook.com/">Facebook</a>
+            </li>
+            <li class="social-page">
+              <a href="https://www.linkedin.com/">LinkedIn</a>
+            </li>
+          </ul>
         </div>
-        <ul class="menu-social">
-          <li class="social-page">
-            <a href="https://www.instagram.com/">Instagram</a>
-          </li>
-          <li class="social-page">
-            <a href="https://twitter.com/">Twitter</a>
-          </li>
-          <li class="social-page">
-            <a href="https://www.facebook.com/">Facebook</a>
-          </li>
-          <li class="social-page">
-            <a href="https://www.linkedin.com/">LinkedIn</a>
-          </li>
-        </ul>
       </div>
     </header>
     <main>
